Fix header overlap: use 120px top padding on inner pages

--- a/themes/academic/static/css/style.css
+++ b/themes/academic/static/css/style.css
@@ -820,7 +820,8 @@ h1, h2, h3, h4 {
    ============================================ */
 
 .page-content {
-  padding: 7rem 0 4rem;
+  padding-top: 120px;
+  padding-bottom: 4rem;
   min-height: 60vh;
 }
 
